--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ __pycache__/PlayerAction.cpython-38.pyc
 __pycache__/SplashSceen.cpython-38.pyc
 __pycache__/Config.cpython-38.pyc
 __pycache__/Container.cpython-38.pyc
+__pycache__/Countdown.cpython-38.pyc
